# ChatWebApp

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: chat.js
templates/: admin.html  chat.html  login.html  register.html
