[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "build", "dist"]
skip_glob = ["*/migrations/*"]

[tool.bandit]
exclude_dirs = ["/tests", "/test", "/.venv"]
skips = []
tests = []
severity = "medium"

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ChatWebApp"
version = "1.3.6"
description = "Flask Chat Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Flask==1.1.1",
  "Werkzeug==0.16.0",
  "Jinja2==2.10.1",
  "itsdangerous==1.1.0",
  "MarkupSafe==1.1.1",
]

[project.optional-dependencies]
dev = ["black", "isort", "bandit[toml]", "flake8", "mypy"]

[project.scripts]
dvpa = "app:main"
